@@ -18,6 +18,7 @@ fixed bugs:
 - fixed bug in DINS heuristic that occured when the incumbent solution value is outside the variable's current domain 
 - fixed bug in DINS w.r.t. columns generation
 - fixed bug in heur_subnlp.c where wrong constraints forbidding variable fixations where added in case of general integers
+- fixed bug in var.c where a possible multiaggregation was resolved to an aggregation but the variables types were not checked to prefer more general types for aggregating; possible memory loss removed
 
 performance improvements:
 - shiftandpropagate-heuristic uses optimized data structures and produces no memory overhead anymore
